Fix window being stuck for projects route.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 main {
   width: 100vw;
   min-height: 100vh;
-  position: fixed;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -19,7 +19,7 @@ main {
   }
 
   .app {
-    @apply relative p-4 mx-auto justify-stretch max-w-7xl;
+    @apply p-4 mx-auto justify-stretch max-w-7xl;
   }
 
   .btn-circle-primary {
